ajout d'un titre 'en chantier' et de nouveau image

--- a/style.css
+++ b/style.css
@@ -15,6 +15,9 @@ body{
   background-position: bottom;
 
 }
+.centre{
+  color: red;
+}
 /*Dimension de la navbarre*/
 .logo{
   height: 70px;
@@ -118,7 +121,7 @@ width: 100%;
 
 display: flex;
 flex-direction: row;
-justify-content: center;
+justify-content: space-around;
 align-items: center;
 
 }
@@ -265,16 +268,18 @@ align-items: center;
 {
   height: 660px;
   width: 100%;
-  
+
 
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-#n°6 table
+#n°6 table .noms
 {
-
+  height: 167px;
+  width: 168px;
+  border : 1px solid purple;
 }
 
 #n°6 table img
@@ -283,6 +288,16 @@ align-items: center;
   height: 167px;
   width: 168px;
 
+  -webkit-filter: blur(3px);
+	filter: blur(3px);
+	-webkit-transition: .3s ease-in-out;
+	transition: .3s ease-in-out;
+
+}
+
+#n°6 table img:hover{
+  -webkit-filter: blur(0);
+	filter: blur(0);
 }
 
 #n°6 h2
@@ -291,6 +306,114 @@ align-items: center;
   font-size: 3em;
 }
 
+.description{
+  color: black;
+  width: 700px;
+  background-color: white;
+
+  text-align: center;
+  padding: 20px 10px 20px 10px;
+}
+
+.tailleDescription{
+  height: 100px;
+  width: 700px;
+  border: 1px solid yellow;
+  text-align: center;
+}
+.Galerie{
+  color: yellow;
+}
+
+#n°7{
+  border: 1px solid blue;
+
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+
+  width: 100%;
+}
+
+#n°7 .slider{
+  width: 350px;
+  height: 200px;
+  overflow: hidden;
+  margin: 150px auto;
+}
+#n°7 .slides{
+  width: calc(350px * 3);
+  animation: glisse 5s infinite;
+}
+#n°7 .slide{
+  float:left;
+}
+
+@@keyframes glisse {
+
+  0% {
+    transform: translateX(0);
+  }
+
+  8,25% {
+    transform: translateX(-350px);
+  }
+
+  16,5% {
+    transform: translateX(-700px);
+  }
+
+  24,75% {
+    transform: translateX(-1050px);
+  }
+
+  33% {
+    transform: translateX(-1400px);
+  }
+
+  41,25% {
+    transform: translateX(-1750px);
+  }
+
+  49,5% {
+    transform: translateX(-2100px);
+  }
+
+  57,75% {
+    transform: translateX(-2450px);
+  }
+
+  66% {
+    transform: translateX(-2800px);
+  }
+
+  74,25% {
+    transform: translateX(-3150px);
+  }
+
+  82,5% {
+    transform: translateX(-3500px);
+  }
+
+  90,75% {
+    transform: translateX(-3850px);
+  }
+
+  100% {
+    transform: translateX(0);
+  }
+}
+
+/*#n°7 .un{
+  background: url('image/1.jpg');
+  background-repeat: no-repeat;
+}
+ #n°7 .deux{
+   background: url('image/2.jpg');
+   background-repeat: no-repeat;
+
+ }*/
 footer
 {
   border: 1px solid green;
